Fixed spacing in agencies section

--- a/css/queries.css
+++ b/css/queries.css
@@ -212,7 +212,7 @@
   }
 
   .agencies-section {
-    height: 75rem;
+    height: 50rem;
   }
 
   .agencies-section .logos-list {
